# ocaml-web

./: dune-project  flake.nix
_build/: .db  .digest-db  log
_build/default/: ocaml-web.dune-package  ocaml-web.install  ocaml-web.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ocaml_web.cma  ocaml_web.cmxa  ocaml_web.cmxs
_build/default/lib/.merlin-conf/: lib-ocaml_web
_build/default/lib/.ocaml_web.objs/byte/: ocaml_web.cmi  ocaml_web.cmo  ocaml_web.cmt
_build/default/lib/.ocaml_web.objs/native/: ocaml_web.cmx
_build/default/test/.merlin-conf/: exe-test_ocaml_web
_build/default/test/.test_ocaml_web.eobjs/byte/: dune__exe__Test_ocaml_web.cmi  dune__exe__Test_ocaml_web.cmti
_build/default/test/.test_ocaml_web.eobjs/native/: dune__exe__Test_ocaml_web.cmx
_build/install/default/lib/ocaml-web/: META  dune-package  opam
lib/: dune
test/: dune
